--- a/flexbox1.html
+++ b/flexbox1.html
@@ -2,46 +2,65 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Flexbox align 0 — starting code</title>
+    <title>Flexbox 0 — starting code</title>
     <style>
       html {
         font-family: sans-serif;
       }
 
       body {
-        width: 70%;
-        max-width: 960px;
-        margin: 20px auto;
+        margin: 0;
       }
 
-      button {
-        font-size: 18px;
-        line-height: 1.5;
-        width: 15%;
-      }
-
-      div {
+      header {
+        background: purple;
         height: 100px;
-        border: 1px solid black;
+      }
+
+      h1 {
+        text-align: center;
+        color: white;
+        line-height: 100px;
+        margin: 0;
+      }
+
+      article {
+        padding: 10px;
+        margin: 10px;
+        background: aqua;
       }
 
       /* Add your flexbox CSS below here */
-      
-      section{
-        display: flex;
-        flex-direction: column;
-      }
+
 
       
     </style>
   </head>
   <body>
-    <div>
-      <button>Smile</button>
-      <button>Laugh</button>
-      <button>Wink</button>
-      <button>Shrug</button>
-      <button>Blush</button>
-    </div>
+    <header>
+      <h1>Sample flexbox example</h1>
+    </header>
+
+    <section>
+      <article>
+        <h2>First article</h2>
+
+        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+      </article>
+
+      <article>
+        <h2>Second article</h2>
+
+        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+      </article>
+
+      <article>
+        <h2>Third article</h2>
+
+        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+
+        <p>Cray food truck brunch, XOXO +1 keffiyeh pickled chambray waistcoat ennui. Organic small batch paleo 8-bit. Intelligentsia umami wayfarers pickled, asymmetrical kombucha letterpress kitsch leggings cold-pressed squid chartreuse put a bird on it. Listicle pickled man bun cornhole heirloom art party.</p>
+      </article>
+    </section>
   </body>
 </html>
